--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Products</string>
+    <string name="app_name">Продукты</string>
+    <string name="btn_download_xml_text">Загрузить xml</string>
+    <string name="btn_product_list">Cписок продуктов</string>
 </resources>
